--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 <h1>Hello please visit here</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <a href="https://6apollonox.github.io/">Know me,Connect me</a>.
+  <h2>HERE SEE MY USEFUL WEBBSITES</h2>
+  <a href="https://codescracker.com/cpp/cpp-character-set.htm">CODESCRACKER</a>
+  <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks">CODESCRACKER</a>
+  
 </body>
 </html>
