--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <a href="https://6apollonox.github.io/">Know me,Connect me</a>.
   <h2>HERE SEE MY USEFUL WEBBSITES</h2>
   <a href="https://codescracker.com/cpp/cpp-character-set.htm">CODESCRACKER</a>
-  <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks">CODESCRACKER</a>
+  <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks">Mozilla HYPERLINK</a>
   
 </body>
 </html>
