--- a/JeskoKoenigsegg.html
+++ b/JeskoKoenigsegg.html
@@ -42,7 +42,7 @@
 <h1><u>KOENIGSEGG JESKO</u></h1>
 
 <div>
-<img src="Jesko.jpg">
+<img src="/baphomet.jpg">
     <p>The key to this functionality is found in both the transmission’s unique design and Koenigsegg’s intelligent <mark>‘UPOD’</mark> technology – Ultimate Power On Demand. UPOD is the brain that instantly selects and engages optimum gearing for maximum acceleration.</p>
 </div>
     <h2 style="color: darkblue"><u>ENGINE</u></h2>
