Update and rename JeskoKoenigsegg.html to baphomet.html

--- a/baphomet.html
+++ b/baphomet.html
@@ -39,13 +39,13 @@
 </style>
 <body >
 
-<h1><u>KOENIGSEGG JESKO</u></h1>
+<h1><u>BAPHOMET</u></h1>
 
 <div>
 <img src="/baphomet.jpg">
-    <p>The key to this functionality is found in both the transmission’s unique design and Koenigsegg’s intelligent <mark>‘UPOD’</mark> technology – Ultimate Power On Demand. UPOD is the brain that instantly selects and engages optimum gearing for maximum acceleration.</p>
+    <p>The Baphomet is a deity that the <mark>'Knights Templar'</mark> were accused of worshipping and that subsequently was incorporated into occult and mystical traditions.</p>
 </div>
     <h2 style="color: darkblue"><u>ENGINE</u></h2>
-    <p1>The engine is a development of the 5.0-litre twin-turbocharged V8 engine used in the Agera. It has four valves per cylinder each with a bore and stroke of 92 mm × 95.25 mm (3.62 by 3.75 inches) and a compression ratio of 8.6:1. The engine has a power output of 1,298 PS (955 kW; 1,280 hp) on normal gasoline and has a power output of 1,622 PS (1,193 kW; 1,600 hp) and 1,573 N⋅m (1,160 lb⋅ft) of torque at 5,100 rpm on E85 biofuel.</p1>
+    <p1>Since 1856, the name Baphomet has been associated with a "Sabbatic Goat".The flame of intelligence shining between his horns is the magic light of the universal balance, the image of the soul elevated above matter, as the flame, whilst being tied to matter, shines above it. The beast's head expresses the horror of the sinner, whose materially acting, solely responsible part has to bear the punishment exclusively; because the soul is insensitive according to its nature and can only suffer when it materializes.</p1>
 </body>
 </html>
