--- a/baphomet.html
+++ b/baphomet.html
@@ -46,6 +46,6 @@
     <p>The Baphomet is a deity that the <mark>'Knights Templar'</mark> were accused of worshipping and that subsequently was incorporated into occult and mystical traditions.</p>
 </div>
     <h2 style="color: darkblue"><u>ENGINE</u></h2>
-    <p1>Since 1856, the name Baphomet has been associated with a "Sabbatic Goat".The flame of intelligence shining between his horns is the magic light of the universal balance, the image of the soul elevated above matter, as the flame, whilst being tied to matter, shines above it. The beast's head expresses the horror of the sinner, whose materially acting, solely responsible part has to bear the punishment exclusively; because the soul is insensitive according to its nature and can only suffer when it materializes.</p1>
+    <p1>Since 1856, the name Baphomet has been associated with a "Sabbatic Goat".The flame of intelligence shining between his horns is the magic light of the universal balance, the image of the soul elevated above matter, as the flame, whilst being tied to matter, shines above it. The beast's head expresses the horror of the sinner, whose materially acting, solely responsible part has to bear the punishment exclusively.</p1>
 </body>
 </html>
