--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
-<!DOCTYPE html>
 <html>
-<body>
-<h1>Hello please visit here</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<a href="https://6apollonox.github.io/">Know me,Connect me</a>.
-  <h2>HERE SEE MY USEFUL WEBBSITES</h2>
-  <a href="https://codescracker.com/cpp/cpp-character-set.htm">CODESCRACKER</a>
-  <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Creating_hyperlinks">Mozilla HYPERLINK</a>
-  <h3>This is for test page</h3>
-  <a href="https://guides.github.com/features/mastering-markdown">MARKDOWN</a>
-  <div>
-    <a href="/JeskoKoenigsegg.html">My Invested Time for You</a>
-  </div>
-</body>
+    <head>
+        <title>Noxious Method</title>
+    </head>
+       <style>
+        h1{
+            color: orangered;
+            text-align: center;
+            background-color: peachpuff;
+            margin-left: 450px;
+            margin-right: 450px;
+        }
+        body{
+         background-color: skyblue;
+        }
+           h2{
+               text-align: center;
+           }
+           p{
+               text-align: center;
+               color: firebrick;
+               font-size: 50px; 
+           }
+           img{
+               width: 600px;
+               height: 450px;
+               border: 3px solid yellow;
+               margin-left: 500px;
+           }
+    </style>
+    <body>
+        <h1><u>WELCOME TO THE NEW SITE.</u></h1>
+        <div></div>
+        <h2>Merry Christmas and Happy New YEAR 2020</h2>
+        <p>Appreciating your wait and as a token of gratitude, I wish you happy holidays for Christmas and New year.</p>
+        <img src="merry.jpg">
+    </body>
 </html>
