--- a/wishes.html
+++ b/wishes.html
@@ -30,7 +30,7 @@
         type="text"/>
         <br><br>
         Password: <input id="pass" placeholder="Password"
-        type=password/>
+        type="password"/>
         <br><br>
         <button type="submit">Submit!</button>
     </form>
