--- a/wishes.html
+++ b/wishes.html
@@ -25,7 +25,7 @@
             }
     </style>
     <body>
-    <form onsubmit="return validate()" action="index.html">
+    <form onsubmit="return validate()" action="tin.html">
         Name: <input id="Uname" placeholder="Username"
         type="text"/>
         <br><br>
